# creative-workflow-docs-library

./: .dockerignore  .env.docker.example  .env.server.example  .env.worker.example  .gitignore  CLAUDE_CODE_COLLABORATION_MANIFEST.md  Dockerfile.operator  MANIFEST.txt  README.md  README_START_HERE.md  README_START_HERE.uk.md  REVIEWER_FIRST_ADDED_2026_05_04.md  alembic.ini  docker-compose.operator.yml  pyproject.toml  requirements.operator.txt
alembic/: env.py
codex/: 00_README_FOR_CODEX.md  01_system_spec.md  02_project_structure.md  03_domain_model.md  04_database_schema.md  05_langgraph_workflow.md  06_streamlit_ui_spec.md  07_browser_automation_spec.md  08_provider_adapter_contracts.md  09_storage_retention_spec.md  10_milestones.md  11_acceptance_criteria.md  12_open_questions.md  13_dcc_integration_spec.md  14_photoshop_uxp_plugin_spec.md  15_after_effects_integration_spec.md  16_capcut_constraints_and_fallbacks.md  17_host_action_protocol.md  18_photoshop_panel_companion_spec.md  19_after_effects_bridge_companion_spec.md  20_agent_skills_and_tool_routing_spec.md  21_server_worker_architecture.md  22_local_llm_orchestrator_spec.md  23_worker_protocol_spec.md  24_deployment_and_network_spec.md  25_api_and_ws_surface.md  26_worker_service_design.md  27_job_schema_and_state_machine.md  28_file_transfer_and_artifact_protocol.md  29_reliability_and_failure_policy.md  30_server_worker_acceptance_suite.md  31_implementation_master_plan.md  32_codex_execution_rules_and_skills.md  33_code_style_and_commenting_contract.md  34_test_strategy_and_quality_bar.md  (+7 more)
(+122 files in other folders)
