[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-workflow"
version = "0.1.0"
description = "Two-machine browser-first creative workflow MVP."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "cachetools>=5.5,<6",
  "fastapi>=0.111",
  "httpx>=0.27",
  "playwright>=1.44",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "streamlit>=1.35",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
server = "creative_workflow.server.cli:app"
worker = "creative_workflow.worker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
